--- a/models/drive_link.html
+++ b/models/drive_link.html
@@ -1,4 +1,5 @@
 <html>
 faster rcnn pytorch model
 <a href='https://drive.google.com/file/d/1XVrcfMbCxjDBv2DiIIETOjqpIZ-xPjN6/view?usp=drive_link' >pcb_detect.pth</a>
+click the lnk
 </html>
